# smort

./: .gitignore  Makefile  app.py  compute_feats.py  compute_guo3dfeats.py  compute_motion_stats.py  compute_rifke.py  interx_processing.ipynb  playground.ipynb  pyproject.toml  train.py  visualize.py
configs/: app.yaml  compute_feats.yaml  compute_guoh3dfeats.yaml  compute_motion_stats.yaml  compute_rifke.yaml  train.yaml  trainer.yaml  visualize.yaml
configs/data/: interx.yaml
configs/data/motion_loader/: _base.yaml
configs/hydra/hydra_logging/: tqdm.yaml
configs/hydra/job_logging/: tqdm.yaml
configs/model/: smort.yaml  smotdm.yaml
configs/server/: inference.yaml
smort/: config.py  geometry.py  joints.py  rifke.py  tqdm_logging.py  utils.py
smort/api/: inference.py
smort/data/: data_module.py  text_motion_dataset.py
smort/models/: losses.py  modules.py  smort.py  text_encoder.py
smort/renderer/: matplotlib.py
smotdm/: geometry.py  joints.py  metrics.py  rifke.py  tqdm_logging.py  utils.py
smotdm/data/: collate.py  data_module.py  loader.py  motion.py  motion_dataset.py  normalizer.py  text_motion_dataset.py
smotdm/models/: losses.py  modules.py  motion_encoder.py  pe.py  smotdm.py  text_encoder.py
smotdm/renderer/: matplotlib.py
